# harmonypy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  README.rst  debug.py  publish_to_pypi.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
data/: download_data.sh
harmonypy/: __init__.py  harmony.py  harmony_jax.py  lisi.py
src/harmonypy/: __init__.py  harmony.py  harmony_class.py  workspace.code-workspace
tests/: .test_harmony.py.swp  .test_lisi.py.swp  test_harmony.py  test_lisi.py  test_perf.py
