[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harmonypy"
dynamic = ["version"]
description = "A data integration algorithm."
readme = "README.md"
license = "mit"
requires-python = ">=3.10"
authors = [
    { name = "Kamil Slowikowski", orcid = "0000-0002-2843-6370", email = "kslowikowski@gmail.com" },
    { name = "John Arevalo", orcid = "0000-0002-1138-5036", email = "johnarevalo@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
]

[project.urls]
Homepage = "https://github.com/slowkow/harmonypy"

[tool.hatch.version]
path = "harmonypy/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "harmonypy/",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest"
]
